Add aliases for /files endpoint.
